--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
       <artifactId>cors-filter</artifactId>
       <version>1.7</version>
     </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.0.Final</version>
+    </dependency>
   </dependencies>
 
 
